--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,10 @@
 			<url>http://repo.springsource.org/libs-milestone</url>
 		</repository> -->
 		
-		<repository>
+		<!-- <repository>
 			<id>repo.jenkins-ci.org</id>
 			<url>http://repo.jenkins-ci.org/public/</url>
-		</repository>
+		</repository> -->
 		
 		<repository>
 		<id>central</id>
@@ -281,12 +281,12 @@
 			<version>3.0.1</version>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.jenkins-ci.plugins</groupId>
 			<artifactId>testInProgress-client</artifactId>
 			<version>1.0</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 		
 		
 		
@@ -517,7 +517,7 @@
 		</configuration>
 	</plugin>
 	
-	<plugin>
+	<!-- <plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-surefire-plugin</artifactId>
 			<version>2.13</version>
@@ -526,7 +526,7 @@
 					<include>**/ProgressAllTestsSuite.java</include>
 				</includes>
 			</configuration>
-		</plugin>
+		</plugin> -->
 	
 	
 	
